<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".vista.publicaciones.AgregarPublicacionFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/view_header"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/header_langroup"
                android:importantForAccessibility="no" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <ImageButton
                    android:id="@+id/button_regresar"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/chevron_left"
                    android:background="@color/transparente" />

                <TextView
                    android:id="@+id/lbl_nueva_publicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="13dp"
                    android:text="@string/lbl_new_post"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/lbl_grupo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Grupo"
                android:textSize="18sp"
                android:layout_marginStart="45dp" />

            <Spinner
                android:id="@+id/spinner_grupos"
                android:layout_marginStart="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lbl_titulo_publicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_title"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="45dp" />

            <EditText
                android:id="@+id/edit_text_titulo_publicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_seleccionar_imagen"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:backgroundTint="@color/azul3"
                    android:text="Seleccionar imagen"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/image_view_archivo"
                android:layout_width="wrap_content"
                android:layout_height="145dp"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/banner_placeholder"
                tools:src="@drawable/banner_placeholder"
                android:importantForAccessibility="no"
                android:adjustViewBounds="true" />

            <TextView
                android:id="@+id/lbl_descripcion_publicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_description"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="45dp" />

            <EditText
                android:id="@+id/edit_text_descripcion_publicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="textMultiLine"
                android:lines="6"
                android:layout_marginTop="0dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp" />

            <Button
                android:id="@+id/button_publicar"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:text="@string/btn_post"
                android:textColor="@color/black"
                android:backgroundTint="@color/azul3" />

        </LinearLayout>
    </ScrollView>
</layout>